# dnants

./: .gitignore  CMakeLists.txt  COPYING.md  README.md  build.dev.sh  build.sh
CMakeExt/: CompilerFlags.cmake  FindPython.cmake
dnants/: CMakeLists.txt
dnants/examples/: greedy.py  simple.py  tracer.py
dnants/include/dnants/: app_engine.h  app_play_state.h  app_state.h
dnants/include/dnants/view/: utils.h  window.h
dnants/include/gos/: app_engine.h  app_play_state.h
dnants/include/gos/view/: svg_texture.h  utils.h  window.h
dnants/src/: app_engine.cc  app_play_state.cc  main.cc
dnants/src/view/: svg_texture.cc
gos/: CMakeLists.txt
gos/include/gos/: app_engine.h  app_play_state.h  app_state.h  client.h  default_rules.h  rule_engine.h  state.h  types.h  view.h
gos/include/gos/dna/: rule_types.h
gos/include/gos/state/: ant.h  ant_state.h  ant_team.h  cell.h  cell_state.h  client_state.h  game_state.h  grid.h  map_generator.h  population.h
gos/include/gos/util/: logging.h  random.h  timestamp.h
gos/include/gos/view/: gridview.h  svg_texture.h  texture.h  utils.h  window.h
gos/src/: app_engine.cc  app_play_state.cc  client.cc  default_rules.cc  main.cc  py_plugin.cc
gos/src/state/: ant.cc  cell.cc  game_state.cc  map_generator.cc
gos/src/util/: random.cc
gosclient/: state_server.py
parser/: CMakeLists.txt
parser/src/: main.cc
pygos/: CMakeLists.txt
pygos/client/: aggressive.py  defensive.py
pygos/include/pygos/: py_plugin.h
pygos/samples/: basic.py  client.py  collapsing.py  greedy.py  minimal.st  simple.py  simple.st  team-11.py  test.py
pygos/src/: py_plugin.cc
samples/: simple.st
